--- a/2.2.2. spring_mvc/pom.xml
+++ b/2.2.2. spring_mvc/pom.xml
@@ -46,9 +46,9 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>2.4</version>
                     <configuration>
-                        <warSourceDirectory>src/webapp</warSourceDirectory>
+                        <warSourceDirectory>src/webapp/WEB-INF/</warSourceDirectory>
                         <warName>spring_mvc</warName>
-                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                        <failOnMissingWebXml>true</failOnMissingWebXml>
                     </configuration>
                 </plugin>
             </plugins>
